Adding solution up to this point. Have bug still debugging:

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,8 @@
         "iostream": "cpp",
         "ostream": "cpp",
         "ios": "cpp",
-        "cmath": "cpp"
+        "cmath": "cpp",
+        "xstring": "cpp"
     },
     "cSpell.words": [
         "Betancourt"
