--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,7 +57,9 @@
         "sstream": "cpp",
         "stop_token": "cpp",
         "thread": "cpp",
-        "vector": "cpp"
+        "vector": "cpp",
+        "algorithm": "cpp",
+        "regex": "cpp"
     },
     "cSpell.words": [
         "Betancourt"
